Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15472

NTLM auth fails if username with domain part is set in QNetworkProxy constructor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.0.0
    • 4.7.1, 4.7.3
    • None

      When username with domain part is set in QNetworProxy constructor:

      QNetworkProxy configuredProxy(QNetworkProxy::HttpProxy, url.host(), url.port(), "domain\\user", "password");
      QNetworkProxy::setApplicationProxy(configuredProxy);
      

      NTLM proxy auth fails (I believe that MD5 Digest auth fails too) because QAuthenticator treats "domain
      user" string as a single user name. At the moment of initialization authentication method is None and hence no username parsing is performed. Username should be re-parsed when auth method is changed by proxy reply HTTP headers. Attached patch fixes the problem.

        1. qt-ntlm-domain.diff
          5 kB
          Oleksandr Tymoshenko
        2. qt_4_8-network-ntlm_proxy_auth.diff
          3 kB
          Aron Rosenberg
        For Gerrit Dashboard: QTBUG-15472
        # Subject Branch Project Status CR V

            shkearns Shane Kearns
            gonzo Oleksandr Tymoshenko
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes