src/network/kernel/qauthenticator_p.h
@@ -68,8 +68,8 @@ class Q_AUTOTEST_EXPORT QAuthenticatorPrivate
 public:
     enum Method { None, Basic, Plain, Login, Ntlm, CramMd5, DigestMd5 };
     QAuthenticatorPrivate();
+    ~QAuthenticatorPrivate();
 
-    QAtomicInt ref;
     QString user;
     QString extractedUser;
     QString password;
@@ -104,7 +104,7 @@ public:
     static QHash<QByteArray, QByteArray> parseDigestAuthenticationChallenge(const QByteArray &challenge);
 
     void parseHttpResponse(const QList<QPair<QByteArray, QByteArray> >&, bool isProxy);
-
+    void updateCredentials();
 };
 
 
